--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -7,12 +7,8 @@
   },
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.php"
-    },
-    {
       "src": "/(.*)",
-      "dest": "api/index.php"
+      "dest": "/api/index.php"
     }
   ]
 }
